Flickering fixed

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -41,14 +41,14 @@ i {
   width: 150px;
   border: 1px solid white;
   background-color: #14213d;
-  box-shadow: inset 0 0 0 0 white;
+  box-shadow: inset 0 0 0 0.09px #fff;
   transition: ease-out 0.3s;
   margin-bottom: 10px;
   border-radius: 5px;
 }
 
 .navbar div:hover {
-  box-shadow: inset 150px 0 0 0 white;
+  box-shadow: inset 150px 0 0 0.09px white;
 }
 #link:hover {
   color: #14213d;
